# Low-Latency-Order-Router-

./: .gitattributes  .gitignore  README.md  pyproject.toml
.github/workflows/: c_build.yml
c/: CMakeLists.txt  README.md
c/include/: or_backtest.h  or_csv.h  or_exchange.h  or_order_book.h  or_router.h  or_routing.h  or_sim_orders.h  or_types.h
c/src/: main_backtest.c  main_sim_backtest.c  or_backtest.c  or_csv.c  or_exchange.c  or_order_book.c  or_router.c  or_routing.c  or_sim_orders.c  or_strategy_best_price.c  or_strategy_smart.c  or_strategy_twap.c  or_strategy_vwap.c
c/tests/: test_exchange.c  test_latency.c  test_order_book.c  test_sim_orders.c  test_strategies.c
order_router/: __init__.py  backtest.py  child_order.py  comparator.py  exceptions.py  exchange.py  models.py  order_book.py  price_feed.py  router.py  venue_registry.py
order_router/routing/: __init__.py  base.py  best_price.py  smart.py  twap.py  vwap.py
scripts/: benchmark_report.py  build.sh  c_latency_profile.py  profile_latency.py  run_backtest.py  run_c_backtest.py
tests/: test_backtest.py  test_latency.py  test_order_book.py  test_routing_engine.py
